--- a/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
@@ -208,7 +208,7 @@
                             <div class="gird wide">
                                 <div class="row no-gutter">
                                     <div class="col l-8 m-8 c-12 about_container">
-                                        <span>@property.p_description.Substring(0, 50)</span>
+                                        <span>@property.p_description</span>
                                         @*<div class="first_about">
                                                 <p>@property.p_description.Substring(0 , 50)</p>
                                             </div>
