--- a/PPl3/Views/Home/Detail.cshtml
+++ b/PPl3/Views/Home/Detail.cshtml
@@ -193,7 +193,7 @@
                             <div class="gird wide">
                                 <div class="row no-gutter">
                                     <div class="col l-8 m-8 c-12 about_container">
-                                        <span>@property.p_description.Substring(0, 50)</span>
+                                        <span>@property.p_description</span>
 
                                     </div>
                                     <div class="col l-12 m-12 c-12 show_more_about">
