--- a/PPl3/ExtraFiles/assets/css/hotel.css
+++ b/PPl3/ExtraFiles/assets/css/hotel.css
@@ -634,3 +634,9 @@ html {
     cursor: pointer;
 }
 
+
+.selected {
+    border: 3px solid #000 !important;
+    background-color: rgb(208, 208, 208) !important;
+    color: #727171;
+}
